[gd_scene load_steps=12 format=3 uid="uid://4wcmeivlo8pv"]

[ext_resource type="Script" path="res://Scenes/Enemies/MossBiome/mossive_max.gd" id="1_s22r2"]
[ext_resource type="Script" path="res://Scenes/EnemyStateMachine/enemy_state_machine.gd" id="2_0aftc"]
[ext_resource type="Texture2D" uid="uid://cylxtewagd56n" path="res://Assets/Enemies/MossBiome/MossiveMax.png" id="2_s5r4j"]
[ext_resource type="PackedScene" uid="uid://c3htwosdpinol" path="res://Scenes/EnemyStateMachine/idle_state.tscn" id="4_m2l7d"]
[ext_resource type="PackedScene" uid="uid://bjdn5xmk516ni" path="res://Scenes/Components/hurtbox_component.tscn" id="7_ym2ny"]
[ext_resource type="PackedScene" uid="uid://dn2q2lgy8sekf" path="res://Scenes/Components/health_component.tscn" id="9_vrxq6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2fwws"]
radius = 16.0
height = 96.0

[sub_resource type="Animation" id="Animation_0nsfg"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btr4n"]
_data = {
"idle": SubResource("Animation_0nsfg")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ep4p5"]
radius = 16.0
height = 96.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6fa4"]
size = Vector2(54, 29)

[node name="MossiveMax" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_s22r2")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_s5r4j")

[node name="StateLabel" type="Label" parent="."]
offset_left = -64.0
offset_top = -72.0
offset_right = 64.0
offset_bottom = -49.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_2fwws")

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("_state")]
script = ExtResource("2_0aftc")
_state = NodePath("IdleState")

[node name="IdleState" parent="EnemyStateMachine" node_paths=PackedStringArray("actor", "animator", "state_label") instance=ExtResource("4_m2l7d")]
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
state_label = NodePath("../../StateLabel")
idle_time_min = 2.0
idle_time_max = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_btr4n")
}

[node name="HealthComponent" parent="." instance=ExtResource("9_vrxq6")]
position = Vector2(0, -40)
max_health = 250

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("_health_component") instance=ExtResource("7_ym2ny")]
visible = false
_health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape2D_ep4p5")
debug_color = Color(1, 0.368627, 0.309804, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_v6fa4")
debug_color = Color(1, 0.368627, 0.309804, 0.419608)

[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_depleted"]
